--- a/templates/hall da fama.html
+++ b/templates/hall da fama.html
@@ -51,5 +51,25 @@
       </ul>
     </nav>
   </header>
-
+  <section id="ranking" class="ranking">
+    <h1>Compare seu progresso com outros participantes</h1>
+    <p>Conquiste mais pontos de experiência postando comentários relevantes, avaliando e concluindo todas as
+        aulas.
+        Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.</p>
+    <article>
+        <input type="text" list="lista-pontuacoes-cursos" placeholder="Selecione uma opção">
+        <datalist id="lista-pontuacoes-cursos">
+            <option value="Todas as pontuações acumuladas">Todas as pontuações acumuladas</option>
+            <option value="INTERNET DAS COISAS">INTERNET DAS COISAS</option>
+            <option value="MARCAÇÕES HTML E CSS">MARCAÇÕES HTML E CSS</option>
+            <option value="PROGRAMANDO EM PYTHON">PROGRAMANDO EM PYTHON</option>
+            <option value="PROGRAMANDO EM JAVA SCRIPT">PROGRAMANDO EM JAVA SCRIPT</option>
+        </datalist>
+        <li>ALUNOS</li>
+        <li>ALUNOS</li>
+        <li>ALUNOS</li>
+        <li>ALUNOS</li>
+        <li>ALUNOS</li>
+    </article>
+</section>
 </body>
