--- a/templates/validar certificado.html
+++ b/templates/validar certificado.html
@@ -51,5 +51,11 @@
       </ul>
     </nav>
   </header>
-
+  <h1>Validação de Certificado</h1>
+  <p>Insira o caminho para o seu certificado digital:</p>
+  <form action="validar_certificado.php" method="post" enctype="multipart/form-data">
+      <input type="file" name="certificado" accept=".crt,.pem" required>
+      <br><br>
+      <input type="submit" value="Validar">
+  </form>
 </body>
