--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -19,7 +19,7 @@
       </a>
       <ul>
         <li>
-          <a href="../templates/cursos.html">
+          <a href="cursos.html">
             CURSOS
           </a>
         </li>
@@ -29,54 +29,54 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="#sobre">
             SOBRE
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="hall da fama.html">
             HALL DA FAMA
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="validar certificado.html">
             VALIDAR CERTIFIDADO
           </a>
         </li>
         <li>
-          <a href="../templates/formulario de inscrição.html">
+          <a href="formulario de inscrição.html">
             AFILIADOS
           </a>
         </li>
       </ul>
     </nav>
   </header>
-  <ul id="cursos">
-    <li>
-      IOT - INTERNET DAS COISAS
-      <a href="IOT.html" target="_blank"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted
-          autoplay></video>
-      </a>
-    </li>
-    <li>
-      MARCAÇÕES HTML E CSS
-      <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted
-          autoplay></video>
-      </a>
-    </li>
-    <li>
-      PROGRAMANDO EM PYTHON
-      <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted
-          autoplay></video>
-      </a>
-    </li>
-    <li>
-      PROGRAMANDO EM JAVA SCRIPT
-      <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted
-          autoplay></video>
-      </a>
-    </li>
-  </ul>
+  <section id="cursos">
+      <li>
+        IOT - INTERNET DAS COISAS
+        <a href="IOT.html" target="_blank"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted
+            autoplay></video>
+        </a>
+      </li>
+      <li>
+        MARCAÇÕES HTML E CSS
+        <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted
+            autoplay></video>
+        </a>
+      </li>
+      <li>
+        PROGRAMANDO EM PYTHON
+        <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted
+            autoplay></video>
+        </a>
+      </li>
+      <li>
+        PROGRAMANDO EM JAVA SCRIPT
+        <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted
+            autoplay></video>
+        </a>
+      </li>
+  </section>
 </body>
 
 </html>
