--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -29,7 +29,7 @@
           </a>
         </li>
         <li>
-          <a href="#sobre">
+          <a href="sobre.html">
             SOBRE
           </a>
         </li>
@@ -51,32 +51,34 @@
       </ul>
     </nav>
   </header>
-  <section id="cursos">
+  <div class="interface">
+    <section id="cursos">
       <li>
-        IOT - INTERNET DAS COISAS
-        <a href="IOT.html" target="_blank"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted
+        <h2> IOT - INTERNET DAS COISAS
+        </h2> <a href="IOT.html" target="_blank"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted
             autoplay></video>
         </a>
       </li>
       <li>
-        MARCAÇÕES HTML E CSS
-        <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted
+        <h2> MARCAÇÕES HTML E CSS
+        </h2> <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted
             autoplay></video>
         </a>
       </li>
       <li>
-        PROGRAMANDO EM PYTHON
-        <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted
+        <h2> PROGRAMANDO EM PYTHON
+        </h2> <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted
             autoplay></video>
         </a>
       </li>
       <li>
-        PROGRAMANDO EM JAVA SCRIPT
-        <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted
+        <h2> PROGRAMANDO EM JAVA SCRIPT
+        </h2> <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted
             autoplay></video>
         </a>
       </li>
-  </section>
+    </section>
+  </div>
 </body>
 
 </html>
