--- a/templates/hall da fama.html
+++ b/templates/hall da fama.html
@@ -51,8 +51,9 @@
       </ul>
     </nav>
   </header>
+<div class="interface">
   <section id="ranking" class="ranking">
-    <h1>Compare seu progresso com outros participantes</h1>
+    <h2>Compare seu progresso com outros participantes</h2>
     <p>Conquiste mais pontos de experiência postando comentários relevantes, avaliando e concluindo todas as
         aulas.
         Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.</p>
@@ -72,4 +73,5 @@
         <li>ALUNOS</li>
     </article>
 </section>
+</div>
 </body>
