--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -51,5 +51,30 @@
       </ul>
     </nav>
   </header>
-
+  <div class="interface">
+    <section id="sobre">
+        <h2>Nossa Missão</h2>
+        <li>Elevar marcas e ideias a novos patamares</li>
+        <li>Criar conexões autênticas</li>
+        <li>Gerar resultados tangíveis</li>
+      <h2>Nossa Visão</h2>
+      <p style="background-color: #230d731a;">
+        Ser a empresa de produção referência em criatividade, inovação e excelência, reconhecida por sua capacidade de
+        gerar resultados excepcionais para seus clientes.</p>
+      <h2>Nossos Valores</h2>
+      <li>Criatividade</li>
+      <li>Paixão</li>
+      <li>Excelência</li>
+      <li>Comprometimento</li>
+      <li>Transparência</li>
+      <li>Respeito</li>
+      <h2>O que nos diferencia</h2>
+      <li>Experiência e Expertise</li>
+      <li>Criatividade Inovadora</li>
+      <li>Visão Estratégica</li>
+      <li>Foco em Resultados</li>
+      <li>Atendimento Personalizado</li>
+      </ul>
+    </section>
+  </div>
 </body>
