--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -52,6 +52,14 @@
     </nav>
   </header>
   <div class="interface">
+  <section>
+    <h2>A PK Produções é a parceira ideal para empresas e profissionais que buscam:</h2>
+    <ul>
+      <li>Soluções criativas e inovadoras para seus projetos de comunicação.</li>
+      <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
+      <li>Uma parceria de confiança para impulsionar o crescimento e o sucesso do seu negócio.</li>
+    </ul>
+    </section>
     <section id="sobre">
         <h2>Nossa Missão</h2>
         <li>Elevar marcas e ideias a novos patamares</li>
