--- a/static/style.css
+++ b/static/style.css
@@ -37,7 +37,7 @@ button {
 
 section {
     max-width: 1200px;
-    margin: auto;
+    margin: 15px;
 }
 
 section li,
@@ -269,6 +269,7 @@ ul#cursos li {
 }
 
 ul {
+    text-align: center;
     background-color: #230D73;
     box-shadow: #230D73 10px 10px 50px 10px;
     color: white;
