--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -83,6 +83,27 @@
       <li>Foco em Resultados</li>
       <li>Atendimento Personalizado</li>
       </ul>
+      <h2 style="text-align: center;">
+        <strong>
+          ATENÇÃO !
+        </strong>
+      </h2>
+      <p style="text-align: center;">
+        RESUMINDO (CRIAMOS PLATAFORMAS PARA INVESTIDORES, ÊNFASE PARA SOLUCIONAR PROBLEMAS COMO GESTÃO > PARA CRM, CRIAR
+        DESING PARA LOGOS, CRIAR LANDING PAGE, TRAFEGO PAGO e etc...)
+      </p>
+      <p style="background-color: white;">
+        Clique
+        <a href="https://iplis.ru/meu-portifolio" target="_blank">
+          <button type="button" id="ixd01">
+            aqui
+          </button>
+        </a>
+        para ter mais informações do nosso
+        <strong>
+          Portifolio
+        </strong>
+      </p>
     </section>
-  </div>
+      </div>
 </body>
