--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -52,6 +52,7 @@
     </nav>
   </header>
   <div class="interface">
+    <img style="float: right;" src="../static/fundo.png" alt="">
     <section id="cursos">
       <li>
         <h2> IOT - INTERNET DAS COISAS
