--- a/templates/marcações.html
+++ b/templates/marcações.html
@@ -12,14 +12,6 @@
 </head>
 
 <body>
-  <a href="https://maper.info/2vNhu6asdas" target="_blank">
-    <video id="btnWhatsapp" muted autoplay loop>
-      <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-        style="video::internal-media-controls{display: none;}">
-      <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-        style="video::internal-media-controls{display: none;}">
-    </video>
-  </a>
   <header>
     <nav>
       <a id="logoPK" href="../index.html">
@@ -27,7 +19,7 @@
       </a>
       <ul>
         <li>
-          <a href="../templates/cursos.html">
+          <a href="cursos.html">
             CURSOS
           </a>
         </li>
@@ -37,22 +29,22 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="sobre.html">
             SOBRE
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="hall da fama.html">
             HALL DA FAMA
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="validar certificado.html">
             VALIDAR CERTIFIDADO
           </a>
         </li>
         <li>
-          <a href="../templates/formulario de inscrição.html">
+          <a href="formulario de inscrição.html">
             AFILIADOS
           </a>
         </li>
@@ -61,13 +53,9 @@
   </header>
   <section class="finalizar">
     <h1>MARCAÇÕES HTML E CSS</h1>
-    <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video>
-    <h1>Valor da inscrição</h1>
-    <p style="text-align: end;">R$ 19,90/mês</p>
-    <label for="">
-      Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
-    </label>
-    <h2>Habilidades básicas para desenvolver sites em mobile e PC</h2>
+    <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Cadastrar-se</button></a>
+   <video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted autoplay></video>
+      <h2>Habilidades básicas para desenvolver sites em mobile e PC</h2>
     <p>Para desenvolver sites em mobile e PC, você precisa dominar algumas habilidades básicas, como:</p>
     <h3>HTML e CSS</h3>
     <ul>
@@ -83,14 +71,17 @@
       desktops.
     </p>
     <h3>Princípios de UX/UI</h3>
-    <li>
-      **UX (User Experience):** Experiência do usuário ao navegar no site, focando na usabilidade, facilidade de
-      navegação e interação.
-    </li>
-    <li>
-      **UI (User Interface):** Interface visual do site, abrangendo design, layout, cores e tipografia.
-    </li>
+    <ul>
+      <li>
+        **UX (User Experience):** Experiência do usuário ao navegar no site, focando na usabilidade, facilidade de
+        navegação e interação.
+      </li>
+      <li>
+        **UI (User Interface):** Interface visual do site, abrangendo design, layout, cores e tipografia.
+      </li>
+    </ul>
     <h3>Outras habilidades importantes</h3>
+  <ul>
     <li>
       **Acessibilidade:** Garantir que o site seja acessível a todos os usuários, incluindo pessoas com deficiência.
     </li>
@@ -100,6 +91,6 @@
     <li>
       **Segurança:** Proteger o site contra ataques e malwares.
     </li>
-    <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Finalizar</button></a>
+  </ul>
   </section>
 </body>
