--- a/templates/python.html
+++ b/templates/python.html
@@ -12,62 +12,50 @@
 </head>
 
 <body>
-    <a href="https://maper.info/2vNhu6asdas" target="_blank">
-        <video id="btnWhatsapp" muted autoplay loop>
-            <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-                style="video::internal-media-controls{display: none;}">
-            <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-                style="video::internal-media-controls{display: none;}">
-        </video>
-    </a>
-    <header>
-        <nav>
-          <a id="logoPK" href="../index.html">
-            <img src="../static/logoPK.png" alt="">
+  <header>
+    <nav>
+      <a id="logoPK" href="../index.html">
+        <img src="../static/logoPK.png" alt="">
+      </a>
+      <ul>
+        <li>
+          <a href="cursos.html">
+            CURSOS
           </a>
-          <ul>
-            <li>
-              <a href="../templates/cursos.html">
-                CURSOS
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/ti.udia/" target="_blank">
-                BLOG
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                SOBRE
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                HALL DA FAMA
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                VALIDAR CERTIFIDADO
-              </a>
-            </li>
-            <li>
-              <a href="../templates/formulario de inscrição.html">
-                AFILIADOS
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </header>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/ti.udia/" target="_blank">
+            BLOG
+          </a>
+        </li>
+        <li>
+          <a href="sobre.html">
+            SOBRE
+          </a>
+        </li>
+        <li>
+          <a href="hall da fama.html">
+            HALL DA FAMA
+          </a>
+        </li>
+        <li>
+          <a href="validar certificado.html">
+            VALIDAR CERTIFIDADO
+          </a>
+        </li>
+        <li>
+          <a href="formulario de inscrição.html">
+            AFILIADOS
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
     <section class="finalizar">
         <h1>PROGRAMANDO EM PYTHON</h1>
+        <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Cadastrar-se</button></a>
         <video src="../static/PROGRAMANDO EM PYTHON.mp4" loop autoplay muted></video>
-        <h1>Valor da inscrição</h1>
-        <p style="text-align: end;">R$ 19,90/mês</p>
-        <label for="">
-            Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
-        </label>
-        <h2>Habilidades básicas para desenvolver sites em mobile e PC</h2>
+             <h2>Habilidades básicas para desenvolver sites em mobile e PC</h2>
         <p>Para desenvolver sites em mobile e PC, você precisa dominar algumas habilidades básicas, como:</p>
         <h2>Habilidades Básicas para Começar a Programar em Python</h2>
         <p>Para começar a programar em Python, você precisa dominar algumas habilidades básicas:</p>
@@ -100,6 +88,5 @@
             <p>Com essas habilidades básicas, você estará pronto para começar a programar em Python e criar seus
                 próprios programas.</p>
         </section>
-        <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Finalizar</button></a>
     </section>
 </body>
