--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,9 @@
 .interface{
     margin-top: 20vh;
 }
+.interface #loocursos{
+    padding: 15px;
+} 
 header {
     position: relative;
     background-color: #230D73;
@@ -30,10 +33,14 @@ a {
 button {
     margin: auto;
     padding: 5px;
-    border-radius: 25px;
+    margin-bottom: 50px;
+    background-color: #230d736b;
+    color: white;
+    border-radius: 15px;
+    text-align: end;
     text-decoration: none;
-    margin: 15px;
 }
+
 
 section {
     max-width: 1200px;
@@ -179,6 +186,10 @@ video {
     width: 100%;
     margin: auto;
 }
+section.finalizar video {
+    margin-left: 15px;
+    max-width: 385px;
+}
 #cursos video{
     padding-top: 0;
 }
@@ -240,7 +251,7 @@ ul#cursos li {
     list-style: none;
     font-size: medium;
     padding: 10px;
-    background-color: #230D73;
+    background-color: #230d739c;
     color: white;
 }
 
@@ -287,3 +298,24 @@ ul {
 #sobre ul li{
     border-radius: 1px solid gray;
 }
+
+.lista {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .lista li {
+    flex: 1 0 1;
+    padding: 10px;
+    border: 1px solid #ddd;
+    text-align: center;
+  }
+  
+  @media (max-width: 500px) {
+    .lista li {
+      flex: 1 0 50%;
+    }
+  }
