--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -53,32 +53,34 @@
   </header>
   <div class="interface">
     <img style="float: right;" src="../static/fundo.png" alt="">
-    <section id="cursos">
+   <div id="loocursos">
+    <h2>Infoprodutos: Cursos Online para Você Aprender e Crescer!</h2>
+    <ul id="cursos" class="lista" style="columns: 4; background-color: white; box-shadow: 0 0 0 ;">
+      <li>IOT - INTERNET DAS COISAS
+        <a href="IOT.html" target="_blank">
+          <video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted autoplay></video>
+        </a>
+      </li>
       <li>
-        <h2> IOT - INTERNET DAS COISAS
-        </h2> <a href="IOT.html" target="_blank"><video src="../static/IOT - INTERNET DAS COISAS.mp4" loop muted
+        MARCAÇÕES HTML E CSS
+        <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted
             autoplay></video>
         </a>
       </li>
       <li>
-        <h2> MARCAÇÕES HTML E CSS
-        </h2> <a href="marcações.html" target="_blank"><video src="../static/MARCAÇÕES HTML E CSS.mp4" loop muted
+        PROGRAMANDO EM PYTHON
+        <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted
             autoplay></video>
         </a>
       </li>
       <li>
-        <h2> PROGRAMANDO EM PYTHON
-        </h2> <a href="python.html" target="_blank"><video src="../static/PROGRAMANDO EM PYTHON.mp4" loop muted
+        PROGRAMANDO EM JAVA SCRIPT
+        <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted
             autoplay></video>
         </a>
       </li>
-      <li>
-        <h2> PROGRAMANDO EM JAVA SCRIPT
-        </h2> <a href="javascript.html" target="_blank"><video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted
-            autoplay></video>
-        </a>
-      </li>
-    </section>
+    </ul>
+   </div>
   </div>
 </body>
 
