--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -4,85 +4,70 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/style.css" />
-    <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
-    <title>Portifolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../static/style.css" />
+  <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
+  <title>Portifolio</title>
 </head>
 
 <body>
-        <a href="https://maper.info/2vNhu6asdas" target="_blank">
-            <video id="btnWhatsapp" muted autoplay loop>
-                <source src="/static/FALE-CONOSCO-DESKTOP.mp4" media="(min-width: 501px)"
-                    style="video::internal-media-controls{display: none;}">
-                <source src="/static/FALE-CONOSCO-MOBILE.mp4" media="(max-width: 500px)"
-                    style="video::internal-media-controls{display: none;}">
-            </video>
-        </a>
-        <header>
-            <nav>
-              <a id="logoPK" href="../index.html">
-                <img src="../static/logoPK.png" alt="">
-              </a>
-              <ul>
-                <li>
-                  <a href="../templates/cursos.html">
-                    CURSOS
-                  </a>
-                </li>
-                <li>
-                  <a href="https://www.instagram.com/ti.udia/" target="_blank">
-                    BLOG
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    SOBRE
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    HALL DA FAMA
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    VALIDAR CERTIFIDADO
-                  </a>
-                </li>
-                <li>
-                  <a href="../templates/formulario de inscrição.html">
-                    AFILIADOS
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </header>
-    <section class="finalizar">
-        <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
-        <video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video>
-        <h1>Valor da inscrição</h1>
-        <p style="text-align: end;">R$ 19,90/mês</p>
-        <label for="">
-            Atenção, é de extrema importancia enviar o comprovante para equipe de suporte para finalizar a compra.
-        </label>
-        <h1>JavaScript</h1>
-        <p>Linguagem de programação que permite adicionar interatividade ao site, como animações, menus suspensos,
-            validação de formulários e jogos.</p>
-        <h2>Habilidades para desenvolver sites em mobile e PC</h2>
-
-        <section>
-            <h3>Linguagem de programação</h3>
-            <p><strong>JavaScript:</strong> Permite adicionar interatividade ao site, como animações, menus suspensos,
-                validação de formulários e jogos.</p>
-        </section>
-
-        <section>
-            <h3>Frameworks e bibliotecas</h3>
-            <p>Ferramentas que facilitam o desenvolvimento, fornecendo código pré-escrito para funcionalidades comuns,
-                como sliders, galerias de imagens e carrosséis.</p>
-        </section>
-        <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Finalizar</button></a>
+  <header>
+    <nav>
+      <a id="logoPK" href="../index.html">
+        <img src="../static/logoPK.png" alt="">
+      </a>
+      <ul>
+        <li>
+          <a href="cursos.html">
+            CURSOS
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/ti.udia/" target="_blank">
+            BLOG
+          </a>
+        </li>
+        <li>
+          <a href="sobre.html">
+            SOBRE
+          </a>
+        </li>
+        <li>
+          <a href="hall da fama.html">
+            HALL DA FAMA
+          </a>
+        </li>
+        <li>
+          <a href="validar certificado.html">
+            VALIDAR CERTIFIDADO
+          </a>
+        </li>
+        <li>
+          <a href="formulario de inscrição.html">
+            AFILIADOS
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <section class="finalizar">
+    <h1>PROGRAMANDO EM JAVA SCRIPT</h1>
+    <a href="https://maper.info/2vNhu6asdas" target="_blank"><button>Cadastrar-se</button></a>
+    <video src="../static/PROGRAMANDO EM JAVA SCRIPT.mp4" loop muted autoplay></video>
+    <h1>JavaScript</h1>
+    <p>Linguagem de programação que permite adicionar interatividade ao site, como animações, menus suspensos,
+      validação de formulários e jogos.</p>
+    <h2>Habilidades para desenvolver sites em mobile e PC</h2>
+    <section>
+      <h3>Linguagem de programação</h3>
+      <p><strong>JavaScript:</strong> Permite adicionar interatividade ao site, como animações, menus suspensos,
+        validação de formulários e jogos.</p>
     </section>
+    <section>
+      <h3>Frameworks e bibliotecas</h3>
+      <p>Ferramentas que facilitam o desenvolvimento, fornecendo código pré-escrito para funcionalidades comuns,
+        como sliders, galerias de imagens e carrosséis.</p>
+    </section>
+  </section>
 </body>
