--- a/templates/python.html
+++ b/templates/python.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/style.css" />
     <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
-    <title>Portifolio</title>
-</head>
+    <title>INFOPRODUTOS</title>
+  </head>
 
 <body>
   <header>
