--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../static/style.css" />
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
-  <title>Portifolio</title>
+  <title>INFOPRODUTOS</title>
 </head>
 
 <body>
@@ -53,7 +53,7 @@
   </header>
   <div class="interface">
     <section id="sobre">
-    <h2>A PK Produções é a parceira ideal para empresas e profissionais que buscam:</h2>
+    <h2>A INFOPRODUTOS.ORG é a parceira ideal para empresas e profissionais que buscam:</h2>
     <ul>
       <li>Soluções criativas e inovadoras para seus projetos de comunicação.</li>
       <li>Uma equipe experiente e dedicada a entregar resultados excepcionais.</li>
