--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../static/style.css" />
     <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
-    <title>Portifolio</title>
+    <title>INFOPRODUTOS</title>
 </head>
 
 <body>
@@ -24,47 +24,62 @@
     </picture>
     <header>
         <nav>
-            <a id="logoPK" href="../index.html">
-                <img src="../static/logoPK.png" alt="">
-            </a>
-            <ul>
-                <li>
-                    <a href="../templates/cursos.html">
-                        CURSOS
-                    </a>
-                </li>
-                <li>
-                    <a href="https://www.instagram.com/ti.udia/" target="_blank">
-                        BLOG
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        SOBRE
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        HALL DA FAMA
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        VALIDAR CERTIFIDADO
-                    </a>
-                </li>
-                <li>
-                    <a href="../templates/formulario de inscrição.html">
-                        AFILIADOS
-                    </a>
-                </li>
-            </ul>
+          <a id="logoPK" href="../index.html">
+            <img src="../static/logoPK.png" alt="">
+          </a>
+          <ul>
+            <li>
+              <a href="cursos.html">
+                CURSOS
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/ti.udia/" target="_blank">
+                BLOG
+              </a>
+            </li>
+            <li>
+              <a href="sobre.html">
+                SOBRE
+              </a>
+            </li>
+            <li>
+              <a href="hall da fama.html">
+                HALL DA FAMA
+              </a>
+            </li>
+            <li>
+              <a href="validar certificado.html">
+                VALIDAR CERTIFIDADO
+              </a>
+            </li>
+            <li>
+              <a href="formulario de inscrição.html">
+                AFILIADOS
+              </a>
+            </li>
+          </ul>
         </nav>
-    </header>
+      </header>
     <div class="interface">
+     <section id="formularioInscricao">
+        <h1>
+            Trabalhe conosco
+        </h1>
+        <li>
+            Já pensou em se tornar um parceiro aqui na Infoprodutos e começar a lucrar na internet hoje.
+        </li>
+        <p>
+            Caso queira constratar algum tipo de servico como Trafego Pago/Organico, Desenvolvimento Web, Correção de códigos, CEO, Productrs maneger entre outros preencha o formulario abaixo. 
+        </p>
+        <p>
+            Veja os termos e condições na plataforma
+        </p>
+      <a href="../static/CONTRATO BASICO exemplar.pptx" download="CONTRATO BASICO exemplar.pptx">Baixe arquivo</a>
         <iframe id="iframe" width="100%" height="700px"
             src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
             frameborder="0" loop marginheight="0" marginwidth="0">Carregando…</iframe>
+     </section>
     </div>
 
 </body>
