--- a/templates/javascript.html
+++ b/templates/javascript.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../static/style.css" />
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
-  <title>Portifolio</title>
+  <title>INFOPRODUTOS</title>
 </head>
 
 <body>
