--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -70,7 +70,7 @@
             Já pensou em se tornar um parceiro aqui na Infoprodutos e começar a lucrar na internet hoje.
         </li>
         <p>
-            Caso queira constratar algum tipo de servico como Trafego Pago/Organico, Desenvolvimento Web, Correção de códigos, CEO, Productrs maneger entre outros preencha o formulario abaixo. 
+            Caso queira contratar algum tipo de servico como Trafego Pago/Organico, Desenvolvimento Web, Correção de códigos, CEO, Productrs maneger entre outros preencha o formulario abaixo. 
         </p>
         <p>
             Veja os termos e condições na plataforma
@@ -81,7 +81,6 @@
             frameborder="0" loop marginheight="0" marginwidth="0">Carregando…</iframe>
      </section>
     </div>
-
 </body>
 
 </html>
