--- a/templates/hall da fama.html
+++ b/templates/hall da fama.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../static/style.css" />
   <link rel="shortcut icon" href="../static/logoPK.png" type="image/x-icon" />
-  <title>INFOPRODUTOS</title>
+  <title>HALL DA FAMA</title>
 </head>
 
 <body>
@@ -51,27 +51,28 @@
       </ul>
     </nav>
   </header>
-<div class="interface">
-  <section id="ranking" class="ranking">
-    <h2>Compare seu progresso com outros participantes</h2>
-    <p>Conquiste mais pontos de experiência postando comentários relevantes, avaliando e concluindo todas as
+  <div class="interface">
+    <section id="ranking" class="ranking">
+      <h2>
+        Compare seu progresso com outros participantes
+      </h2>
+      <p>
+        Conquiste mais pontos de experiência postando comentários relevantes, avaliando e concluindo todas as
         aulas.
-        Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.</p>
-    <article>
+      </p>
+      <p>
+        Se esforce para ir até a linha de chegada e concluir seu curso com máximo de aproveitamento.
+      </p>
+      <article>
         <input type="text" list="lista-pontuacoes-cursos" placeholder="Selecione uma opção">
         <datalist id="lista-pontuacoes-cursos">
-            <option value="Todas as pontuações acumuladas">Todas as pontuações acumuladas</option>
-            <option value="INTERNET DAS COISAS">INTERNET DAS COISAS</option>
-            <option value="MARCAÇÕES HTML E CSS">MARCAÇÕES HTML E CSS</option>
-            <option value="PROGRAMANDO EM PYTHON">PROGRAMANDO EM PYTHON</option>
-            <option value="PROGRAMANDO EM JAVA SCRIPT">PROGRAMANDO EM JAVA SCRIPT</option>
+          <option value="Todas as pontuações acumuladas">Todas as pontuações acumuladas</option>
+          <option value="INTERNET DAS COISAS">INTERNET DAS COISAS</option>
+          <option value="MARCAÇÕES HTML E CSS">MARCAÇÕES HTML E CSS</option>
+          <option value="PROGRAMANDO EM PYTHON">PROGRAMANDO EM PYTHON</option>
+          <option value="PROGRAMANDO EM JAVA SCRIPT">PROGRAMANDO EM JAVA SCRIPT</option>
         </datalist>
-        <li>ALUNOS</li>
-        <li>ALUNOS</li>
-        <li>ALUNOS</li>
-        <li>ALUNOS</li>
-        <li>ALUNOS</li>
-    </article>
-</section>
-</div>
+      </article>
+    </section>
+  </div>
 </body>
