--- a/templates/formulario de inscrição.html
+++ b/templates/formulario de inscrição.html
@@ -73,24 +73,23 @@
         Caso queira contratar algum tipo de servico como Trafego Pago/Organico, Desenvolvimento Web, Correção de
         códigos, CEO, Productrs maneger entre outros preencha o formulario abaixo.
       </p>
-      <p>
-        Veja os termos e condições na plataforma
-      </p>
-      <a href="../static/CONTRATO BASICO exemplar.pptx" download="CONTRATO BASICO exemplar.pptx">
-        Baixe arquivo
-      </a>
       <h1>
         Indicações
       </h1>
+      <p>
+        Veja os termos e condições na plataforma para finalizar o contrato
+      </p>
       <li>
         Convidar cliente
       </li>
+      <a href="../static/CONTRATO BASICO exemplar.pptx" download="CONTRATO BASICO exemplar.pptx">
+        Baixe arquivo
+      </a>
       <a href="https://hostinger.com.br?REFERRALCODE=1PKPRODUCES30">
         <button>
           Hospedagem e Dominio Hostinger
         </button>
       </a>
-      
       <iframe id="iframe" width="100%" height="700px"
         src="https://docs.google.com/forms/d/e/1FAIpQLSc-KSjObS8_6Lmiyj0ZU4VF-nur8QSuPDyZ-iDBIJyQUvDwXg/viewform?embedded=true"
         frameborder="0" loop marginheight="0" marginwidth="0">Carregando…</iframe>
