--- a/templates/hall da fama.html
+++ b/templates/hall da fama.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+ 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -65,19 +65,19 @@
       </p>
       <article>
         <a href="Todas as pontuações acumuladas.html">
-          <option value="Todas as pontuações acumuladas">Todas as pontuações acumuladas</option>
+         TODAS AS OPONTUAÇÕES ACUMULADAS
         </a>
         <a href="os melhores em - INTERNET DAS COISAS.html">
-          <option value="INTERNET DAS COISAS">INTERNET DAS COISAS</option>
+          INTERNET DAS COISAS
         </a>
         <a href="os melhores em - MARCAÇÕES HTML E CSS.html">
-          <option value="MARCAÇÕES HTML E CSS">MARCAÇÕES HTML E CSS</option>
+       MARCAÇÕES HTML E CSS
         </a>
         <a href="os melhores em - PROGRAMANDO EM PYTHON.html">
-          <option value="PROGRAMANDO EM PYTHON">PROGRAMANDO EM PYTHON</option>
+          PROGRAMANDO EM PYTHON
         </a>
         <a href="os melhores em - PROGRAMANDO EM JAVA SCRIPT.html">
-          <option value="PROGRAMANDO EM JAVA SCRIPT">PROGRAMANDO EM JAVA SCRIPT</option>
+      PROGRAMANDO EM JAVA SCRIPT
         </a>
       </article>
     </section>
